FE fetch data in dashboard and handle UI

--- a/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
@@ -94,7 +94,7 @@
     <!-- Dashboard -->
     <li class="menu-item">
       <a class="menu-link">
-        <i class="menu-icon tf-icons bx bx-dock-top"></i>
+        <i class="menu-icon tf-icons bx bx-home-circle"></i>
         <a
           routerLink="{{ appSettings.PATH_DASHBOARD }}"
           routerLinkActive="false"
