--- a/CRM-Update-Final-Project-FE/src/app/layouts/footer/footer.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/footer/footer.component.html
@@ -6,7 +6,9 @@
                 document.write(new Date().getFullYear());
             </script>
             , made with ❤️ by
-            <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">Tang Tai, Hieu Le</a>
+            <a href="https://github.com/duongtangtai" target="_blank" class="footer-link fw-bolder">Tăng Tài</a>
+            <span class="fw-bolder"> & </span>
+            <a href="https://github.com/HieuLeXuan" target="_blank" class="footer-link fw-bolder">Hieu Le</a>
         </div>
         <div>
             <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
