update ui dashboard add cursor poniter for current user login

--- a/CRM-Update-Final-Project-FE/src/app/layouts/footer/footer.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/footer/footer.component.html
@@ -10,7 +10,7 @@
             <span class="fw-bolder"> & </span>
             <a href="https://github.com/HieuLeXuan" target="_blank" class="footer-link fw-bolder">Hieu Le</a>
         </div>
-        <div>
+        <!-- <div>
             <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
             <a href="https://themeselection.com/" target="_blank" class="footer-link me-4">More Themes</a>
 
@@ -27,6 +27,6 @@
                     class="footer-link me-4"
             >Support</a
             >
-        </div>
+        </div> -->
     </div>
 </footer>
