--- a/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/aside/aside.component.html
@@ -77,7 +77,7 @@
           </g>
         </svg>
       </span>
-      <span class="app-brand-text demo menu-text fw-bolder ms-2">Sneat</span>
+      <span class="app-brand-text demo menu-text fw-bolder ms-2">Rira</span>
     </a>
 
     <a
