--- a/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
@@ -1,90 +1,126 @@
 <nav
-        class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-        id="layout-navbar"
+  class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+  id="layout-navbar"
 >
-    <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
-        <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
-            <em class="bx bx-menu bx-sm"></em>
+  <div
+    class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none"
+  >
+    <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
+      <em class="bx bx-menu bx-sm"></em>
+    </a>
+  </div>
+
+  <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
+    <!-- Search -->
+    <div class="navbar-nav align-items-center">
+      <div class="nav-item d-flex align-items-center">
+        <em class="bx bx-search fs-4 lh-0"></em>
+        <input
+          type="text"
+          class="form-control border-0 shadow-none"
+          placeholder="Search..."
+          aria-label="Search..."
+        />
+      </div>
+    </div>
+    <!-- /Search -->
+
+    <ul class="navbar-nav flex-row align-items-center ms-auto">
+      <!-- User -->
+      <li class="nav-item navbar-dropdown dropdown-user dropdown">
+        <a
+          class="nav-link dropdown-toggle hide-arrow"
+          data-bs-toggle="dropdown"
+        >
+          <div class="avatar avatar-online">
+            <img
+              *ngIf="avatar == null && gender == 'MALE'"
+              src="/assets/img/avatars/male-default.png"
+              alt
+              class="w-px-40 rounded-circle"
+            />
+            <img
+              *ngIf="avatar == null && gender == 'FEMALE'"
+              src="/assets/img/avatars/female-default.png"
+              alt
+              class="w-px-40 rounded-circle"
+            />
+            <img
+              *ngIf="avatar != null"
+              [src]="avatar"
+              alt
+              class="w-px-40 rounded-circle"
+            />
+          </div>
         </a>
-    </div>
-
-    <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
-        <!-- Search -->
-        <div class="navbar-nav align-items-center">
-            <div class="nav-item d-flex align-items-center">
-                <em class="bx bx-search fs-4 lh-0"></em>
-                <input
-                        type="text"
-                        class="form-control border-0 shadow-none"
-                        placeholder="Search..."
-                        aria-label="Search..."
-                />
-            </div>
-        </div>
-        <!-- /Search -->
-
-        <ul class="navbar-nav flex-row align-items-center ms-auto">
-
-            <!-- User -->
-            <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                <a class="nav-link dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online">
-                        <img *ngIf="avatar == null && gender == 'MALE'" src="/assets/img/avatars/male-default.png" alt class="w-px-40 rounded-circle"/>
-                        <img *ngIf="avatar == null && gender == 'FEMALE'" src="/assets/img/avatars/female-default.png" alt class="w-px-40 rounded-circle"/>
-                        <img *ngIf="avatar != null" [src]="avatar" alt class="w-px-40 rounded-circle"/>
-                    </div>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end">
-                    <li>
-                        <a class="dropdown-item">
-                            <div class="d-flex">
-                                <div class="flex-shrink-0 me-3">
-                                    <div class="avatar avatar-online">
-                                        <img *ngIf="avatar == null && gender == 'MALE'" src="/assets/img/avatars/male-default.png" alt
-                                             class="w-px-40 rounded-circle"/>
-                                        <img *ngIf="avatar == null && gender == 'FEMALE'" src="/assets/img/avatars/female-default.png" alt
-                                             class="w-px-40 rounded-circle"/>
-                                        <img *ngIf="avatar != null" [src]="avatar" alt
-                                            class="w-px-40 rounded-circle"/>
-                                    </div>
-                                </div>
-                                <div class="flex-grow-1">
-                                    <span class="fw-semibold d-block">{{firstName}} {{lastName}}</span>
-                                    <small class="text-muted">{{roles}}</small>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <div class="dropdown-divider"></div>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" (click)="getProfile()">
-                            <em class="bx bx-user me-2"></em>
-                            <span class="align-middle">My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item">
-                        <span class="d-flex align-items-center align-middle">
-                          <em class="flex-shrink-0 bx bxs-notification me-2"></em>
-                          <span class="flex-grow-1 align-middle">Notification</span>
-                          <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
-                        </span>
-                        </a>
-                    </li>
-                    <li>
-                        <div class="dropdown-divider"></div>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" (click)="logout()">
-                            <em class="bx bx-power-off me-2"></em>
-                            <span class="align-middle">Log Out</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <!--/ User -->
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li>
+            <a class="dropdown-item">
+              <div class="d-flex">
+                <div class="flex-shrink-0 me-3">
+                  <div class="avatar avatar-online">
+                    <img
+                      *ngIf="avatar == null && gender == 'MALE'"
+                      src="/assets/img/avatars/male-default.png"
+                      alt
+                      class="w-px-40 rounded-circle"
+                    />
+                    <img
+                      *ngIf="avatar == null && gender == 'FEMALE'"
+                      src="/assets/img/avatars/female-default.png"
+                      alt
+                      class="w-px-40 rounded-circle"
+                    />
+                    <img
+                      *ngIf="avatar != null"
+                      [src]="avatar"
+                      alt
+                      class="w-px-40 rounded-circle"
+                    />
+                  </div>
+                </div>
+                <div class="flex-grow-1">
+                  <span class="fw-semibold d-block"
+                    >{{ firstName }} {{ lastName }}</span
+                  >
+                  <small class="text-muted">{{ roles }}</small>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li>
+            <div class="dropdown-divider"></div>
+          </li>
+          <li class="cursor-pointer">
+            <a class="dropdown-item" (click)="getProfile()">
+              <em class="bx bx-user me-2"></em>
+              <span class="align-middle">My Profile</span>
+            </a>
+          </li>
+          <li class="cursor-pointer">
+            <a class="dropdown-item">
+              <span class="d-flex align-items-center align-middle">
+                <em class="flex-shrink-0 bx bxs-notification me-2"></em>
+                <span class="flex-grow-1 align-middle">Notification</span>
+                <span
+                  class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20"
+                  >4</span
+                >
+              </span>
+            </a>
+          </li>
+          <li>
+            <div class="dropdown-divider"></div>
+          </li>
+          <li class="cursor-pointer">
+            <a class="dropdown-item" (click)="logout()">
+              <em class="bx bx-power-off me-2"></em>
+              <span class="align-middle">Log Out</span>
+            </a>
+          </li>
         </ul>
-    </div>
+      </li>
+      <!--/ User -->
+    </ul>
+  </div>
 </nav>
