--- a/CRM-Update-Final-Project-FE/src/app/layouts/footer/footer.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/footer/footer.component.html
@@ -1,16 +1,28 @@
 <footer class="content-footer footer bg-footer-theme">
-    <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-        <div class="mb-2 mb-md-0">
-            ©
-            <script>
-                document.write(new Date().getFullYear());
-            </script>
-            , made with ❤️ by
-            <a href="https://github.com/duongtangtai" target="_blank" class="footer-link fw-bolder">Tăng Tài</a>
-            <span class="fw-bolder"> & </span>
-            <a href="https://github.com/HieuLeXuan" target="_blank" class="footer-link fw-bolder">Hieu Le</a>
-        </div>
-        <!-- <div>
+  <div
+    class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column"
+  >
+    <div class="mb-2 mb-md-0">
+      ©
+      <script>
+        document.write(new Date().getFullYear());
+      </script>
+      , made with ❤️ by
+      <a
+        href="https://github.com/duongtangtai"
+        target="_blank"
+        class="footer-link fw-bolder"
+        >Tăng Tài</a
+      >
+      <span class="fw-bolder"> & </span>
+      <a
+        href="https://github.com/HieuLeXuan"
+        target="_blank"
+        class="footer-link fw-bolder"
+        >Hieu Le</a
+      >
+    </div>
+    <!-- <div>
             <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
             <a href="https://themeselection.com/" target="_blank" class="footer-link me-4">More Themes</a>
 
@@ -28,5 +40,5 @@
             >Support</a
             >
         </div> -->
-    </div>
+  </div>
 </footer>
