--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
@@ -382,9 +382,6 @@
       <input matInput placeholder="Reporter Username" class="form-control" formControlName="reporterUsername" />
     </mat-form-field>
   </div>
-  <!-- START TASK DETAIL -->
-
-  <!-- END TASK DETAIL -->
   <!-------------------------------END TASK FORM-------------------------------------->
   <!-------------------------------START COMMENT FORM-------------------------------------->
   <!-- START PREVIOUS COMMENTS -->
@@ -573,6 +570,57 @@
     </div>
   </div>
   <!-----------------------------END MANAGE ROLE IN PROJECT DIALOG------------------------->
+  <!------------------------------------START NOTIFICATION -------------------------------->
+  <div *ngIf="this.type == appSettings.TYPE_NOTIFICATION">
+    <button type="button" class="btn btn-info" [disabled]="title == appSettings.TITLE_NEW_NOTIFICATION"
+      (click)="initNewNotification()">
+      {{appSettings.TITLE_NEW_NOTIFICATION}}
+    </button>
+    &nbsp;
+    <button type="button" class="btn btn-primary" [disabled]="title == appSettings.TITLE_OLD_NOTIFICATION"
+      (click)="initOldNotification()">
+      {{appSettings.TITLE_OLD_NOTIFICATION}}
+    </button>
+    <div class="card">
+      <div class="card-body">
+        <mat-form-field>
+          <mat-label>Search..?</mat-label>
+          <input matInput placeholder="By keyword" (keyup)="filterByKeyword($event)" />
+        </mat-form-field>
+        <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+          <ng-container matColumnDef="description">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">
+              <strong>Description</strong>
+            </th>
+            <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+          </ng-container>
+          <ng-container matColumnDef="createdAt">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">
+              <strong>At</strong>
+            </th>
+            <td mat-cell *matCellDef="let element">{{ element.createdAt }}</td>
+          </ng-container>
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">
+              <strong>Action</strong>
+            </th>
+            <td mat-cell *matCellDef="let element">
+              <button type="button" class="btn btn-danger"
+                (click)="deleteNotification(element.id)">
+                Delete
+              </button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+  <!------------------------------------END NOTIFICATION -------------------------------->
+
   <div mat-dialog-actions class="d-flex justify-content-between">
     <app-button (onClick)="cancelFunc($event)" [label]="appSettings.BUTTON_CANCEL"></app-button>
     <app-button (onClick)="okFunc($event)" [label]="appSettings.BUTTON_OK"></app-button>
