ad task with status is todo for reporter

--- a/CRM-Update-Final-Project-FE/src/app/pages/components/dashboard/dashboard.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/dashboard/dashboard.component.html
@@ -138,7 +138,7 @@
               class="d-flex w-100 flex-wrap align-items-center justify-content-between gap-2"
             >
               <div class="me-2">
-                <h6 class="mb-0">UNASSIGNED</h6>
+                <h6 class="mb-0">TODO</h6>
               </div>
               <div class="user-progress">
                 <small class="fw-semibold">{{ taskStatusUnassigned }}</small>
@@ -169,7 +169,7 @@
               class="d-flex w-100 flex-wrap align-items-center justify-content-between gap-2"
             >
               <div class="me-2">
-                <h6 class="mb-0">STARTED</h6>
+                <h6 class="mb-0">IN PROGRESS</h6>
               </div>
               <div class="user-progress">
                 <small class="fw-semibold">{{ taskStatusStarted }}</small>
@@ -197,7 +197,7 @@
               class="d-flex w-100 flex-wrap align-items-center justify-content-between gap-2"
             >
               <div class="me-2">
-                <h6 class="mb-0">COMPLETED</h6>
+                <h6 class="mb-0">DONE</h6>
               </div>
               <div class="user-progress">
                 <small class="fw-semibold">{{ taskStatusCompleted }}</small>
