--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
@@ -160,7 +160,7 @@
                 <strong>Action</strong>
               </th>
               <td mat-cell *matCellDef="let element">
-                <button class="button btn-primary" (click)="showProjectStaffStatistic(element)">
+                <button *ngIf="element.tasks.length > 0" class="button btn-primary" (click)="showProjectStaffStatistic(element)">
                   See Progress
                 </button>
               </td>
